# ci-cd

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tasks.py
.github/: dependabot.yml
.github/utils/: .pre-commit-config_testing.yaml  run_hooks.py  single_dependency_pr_body.txt  update_tags.sh
.github/workflows/: _local_cd_release.yml  _local_cd_update_from_origin.yml  _local_ci_automerge_dependency_prs.yml  _local_ci_cd_updated_main.yml  _local_ci_check_pyproject_dependencies.yml  _local_ci_tests.yml  _local_ci_update_dependencies.yml  _local_ci_updated_main.yml  cd_release.yml  ci_automerge_prs.yml  ci_cd_updated_default_branch.yml  ci_check_pyproject_dependencies.yml  ci_tests.yml  ci_update_dependencies.yml
ci_cd/: __init__.py  exceptions.py  main.py  tasks.py  utils.py
ci_cd/tasks/: __init__.py  api_reference_docs.py  docs_index.py  setver.py  update_deps.py
ci_cd/utils/: __init__.py  console_printing.py  file_io.py  versions.py
docs/: index.md
docs/api_reference/: exceptions.md  main.md  utils.md
docs/api_reference/tasks/: .pages  api_reference_docs.md  docs_index.md  setver.md  update_deps.md
docs/api_reference/utils/: console_printing.md  file_io.md  versions.md
docs/hooks/: docs_api_reference.md  docs_landig_page.md  docs_landing_page.md  index.md  update_pyproject.md
docs/python/: .pages  tasks.md
docs/workflows/: .pages  cd_release.md  ci_automerge_prs.md  ci_cd_updated_default_branch.md  ci_check_pyproject_dependencies.md  ci_tests.md  ci_update_dependencies.md  index.md
tests/: conftest.py  test_tasks.py  test_tasks_create_api_reference_docs.py  test_tasks_update_deps.py  test_utils.py
tests/tasks/: test_api_reference_docs.py  test_setver.py  test_update_deps.py
tests/utils/: test_versions.py
