[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "ci_cd"

[project]
name = "ci-cd"
authors = [
    {name = "Casper Welzel Andersen", email = "casper.w.andersen@sintef.no"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
keywords = ["ci", "cd", "pre-commit"]
requires-python = "~=3.7"
dynamic = ["version", "description"]

dependencies = [
    "invoke ~=2.2",
    "tomlkit ~=0.12.1",
]

[project.optional-dependencies]
docs = [
    "mike ~=1.1",
    "mkdocs ~=1.5",
    "mkdocs-awesome-pages-plugin ~=2.9",
    "mkdocs-material ~=9.1",
    "mkdocstrings[python-legacy] ~=0.22.0",
]
testing = [
    "pytest ~=7.4",
    "pytest-cov ~=4.1",
]
dev = [
    "pre-commit ~=2.21",
    "pylint ~=2.13",
]

[project.urls]
Home = "https://github.com/SINTEF/ci-cd"
Documentation = "https://SINTEF.github.io/ci-cd"
Source = "https://github.com/SINTEF/ci-cd"
"Issue Tracker" = "https://github.com/SINTEF/ci-cd/issues"
Changelog = "https://SINTEF.github.io/ci-cd/latest/CHANGELOG"

[project.scripts]
"ci-cd" = "ci_cd.main:program.run"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
scripts_are_modules = true
warn_unused_configs = true
show_error_codes = true
allow_redefinition = true
check_untyped_defs = true

[tool.pylint.messages_control]
max-line-length = 90
disable = []
max-args = 15
max-branches = 15
max-returns = 10

[tool.pytest.ini_options]
minversion = "7.0"
filterwarnings = [
    "ignore:.*imp module.*:DeprecationWarning",
    # Remove when invoke updates to `inspect.signature()` or similar:
    "ignore:.*inspect.getargspec().*:DeprecationWarning",
]
