[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "ci_cd"

[project]
name = "ci-cd"
authors = [
    {name = "Casper Welzel Andersen", email = "casper.w.andersen@sintef.no"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
keywords = ["ci", "cd", "pre-commit"]
requires-python = "~=3.7"
dynamic = ["version", "description"]

dependencies = [
    "invoke ~=2.2",
    "packaging ~=23.2",
    "tomlkit ~=0.12.3",
    "typing-extensions ~=4.7; python_version < '3.8'",
    "typing-extensions ~=4.8; python_version >= '3.8'",
]

[project.optional-dependencies]
docs = [
    "mike ~=2.0",
    "mkdocs ~=1.5",
    "mkdocs-awesome-pages-plugin ~=2.9",
    "mkdocs-material ~=9.2; python_version < '3.8'",
    "mkdocs-material ~=9.4; python_version >= '3.8'",
    "mkdocstrings[python-legacy] ~=0.22.0; python_version < '3.8'",
    "mkdocstrings[python-legacy] ~=0.24.0; python_version >= '3.8'",
]
testing = [
    "pytest ~=7.4",
    "pytest-cov ~=4.1",
]
dev = [
    "pre-commit ~=2.21; python_version < '3.8'",
    "pre-commit ~=3.5; python_version >= '3.8'",
    "pylint ~=2.13; python_version < '3.8'",
    "pylint ~=3.0; python_version >= '3.8'",
    "ci-cd[docs,testing]",
]

[project.urls]
Home = "https://github.com/SINTEF/ci-cd"
Documentation = "https://SINTEF.github.io/ci-cd"
Source = "https://github.com/SINTEF/ci-cd"
"Issue Tracker" = "https://github.com/SINTEF/ci-cd/issues"
Changelog = "https://SINTEF.github.io/ci-cd/latest/CHANGELOG"

[project.scripts]
"ci-cd" = "ci_cd.main:program.run"

[tool.mypy]
python_version = "3.7"
ignore_missing_imports = true
scripts_are_modules = true
warn_unused_configs = true
show_error_codes = true
allow_redefinition = true
check_untyped_defs = true

[tool.pylint.messages_control]
max-line-length = 90
disable = []
max-args = 15
max-branches = 18
max-returns = 10

[tool.pytest.ini_options]
minversion = "7.4"
addopts = ["-rs", "--cov=ci_cd", "--cov-report=term-missing:skip-covered"]
filterwarnings = ["error"]
